--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </form>
     </div>
  
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
+    <script type='text/javascript' src='jquery-3.2.1.min.js'></script>
     <script src="script.js"></script>   
   </body>
  
