--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </form>
     </div>
  
-    <script type='text/javascript' src='jquery-3.2.1.min.js'></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.0.min.js"></script>
     <script src="script.js"></script>   
   </body>
  
