downloaded the latest Jquery to see if it fixes the code issue

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </form>
     </div>
  
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.0.min.js"></script>
+    <script src="jquery-migrate-1.4.1.min.js"></script>
     <script src="script.js"></script>   
   </body>
  
