--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </form>
     </div>
  
-    <script src="jquery-migrate-1.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>   
   </body>
  
